add basic filter

--- a/src/basic_filter_nth_last_of_type.html
+++ b/src/basic_filter_nth_last_of_type.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>JQuery Basic Filter nth Child</title>
+	<title>JQuery Basic Filter nth Last Of Type</title>
 	<style type="text/css">
 		div {float: left;}
 		span {color: blue;}
@@ -31,7 +31,7 @@
 	</div>
 	<script type="text/javascript" src="../js/jquery.min.js"></script>
 	<script type="text/javascript">
-		$('ul li:nth-child(2)').append('<span> - 2nd!</span>');
+		$('ul li:nth-last-of-type(2)').append('<span> - 2nd!</span>');
 	</script>
 </body>
 </html>
