--- a/src/child_filter_nth_last_of_type.html
+++ b/src/child_filter_nth_last_of_type.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>JQuery Basic Filter nth Last Of Type</title>
+	<title>JQuery Child Filter nth Last Of Type</title>
 	<style type="text/css">
 		div {float: left;}
 		span {color: blue;}
