--- a/src/index.html
+++ b/src/index.html
@@ -91,6 +91,29 @@
                 <li><a href="content_filter_has.html">:has()</a></li>
                 <li><a href="content_filter_parent.html">:parent</a></li>
             </ul>
+        <h3>Form Selector</h3>
+            <ul>
+                <li><a href="form_button.html">:button</a></li>
+                <li><a href="form_checkbox.html">:checkbox</a></li>
+                <li>:checked
+                    <ul>
+                        <li><a href="form_checked.html">:checked 1</a></li>
+                        <li><a href="form_checked_2.html">:checked 2</a></li>
+                    </ul>
+                </li>
+                <li><a href="form_disabled.html">:disabled</a></li>
+                <li><a href="form_enabled.html">:enabled</a></li>
+                <li><a href="form_file.html">:file</a></li>
+                <li><a href="basic_filter_focus_selector.html">:focus</a></li>
+                <li><a href="form_image.html">:image</a></li>
+                <li><a href="form_input.html">:input</a></li>
+                <li><a href="form_password.html">:password</a></li>
+                <li><a href="form_radio.html">:radio</a></li>
+                <li><a href="form_reset.html">:reset</a></li>
+                <li><a href="form_selected.html">:selected</a></li>
+                <li><a href="form_submit.html">:submit</a></li>
+                <li><a href="form_text.html">:text</a></li>
+            </ul>
     </div>
 </body>
 </html>
