--- a/src/index.html
+++ b/src/index.html
@@ -91,6 +91,18 @@
                 <li><a href="content_filter_has.html">:has()</a></li>
                 <li><a href="content_filter_parent.html">:parent</a></li>
             </ul>
+        <h3>Hierarchy</h3>
+            <ul>
+                <li><a href="hierarchy_child.html">("parent > child")</a></li>
+                <li><a href="hierarchy_descendant.html">("ancester descendant")</a></li>
+                <li><a href="hierarchy_next_adjacent.html">("prev + next")</a></li>
+                <li><a href="hierarchy_next_siblings.html">("prev ~ siblings")</a></li>
+            </ul>
+        <h3>Visibility Filter</h3>
+            <ul>
+                <li><a href="visibility_filter_hidden.html">:hidden</a></li>
+                <li><a href="visibility_filter_visible.html">:visible</a></li>
+            </ul>
     </div>
 </body>
 </html>
