add css addClass()

--- a/src/index.html
+++ b/src/index.html
@@ -103,6 +103,10 @@
                 <li><a href="visibility_filter_hidden.html">:hidden</a></li>
                 <li><a href="visibility_filter_visible.html">:visible</a></li>
             </ul>
+        <h2>CSS</h2>
+        <ul>
+            <li><a href="css_addclass.html">.addClass()</a></li>
+        </ul>
     </div>
 </body>
 </html>
