add a css selector

--- a/src/css_addclass_2.html
+++ b/src/css_addclass_2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>JQuery CSS addClass</title>
+	<title>JQuery CSS addClass 2</title>
 	<style>
     p { margin: 8px; font-size: 16px;}
     .selected { color: blue;}
@@ -15,7 +15,7 @@
   <p>Goodbye</p>
 	<script type="text/javascript" src="../js/jquery.min.js"></script>   
 	<script>
-    $('p').last().addClass('selected');
+    $('p').last().addClass('selected highlight');
 	</script>
 </body>
 </html>
