--- a/src/index.html
+++ b/src/index.html
@@ -128,7 +128,24 @@
             </ul>
         <h2>CSS</h2>
         <ul>
-            <li><a href="css_addclass.html">.addClass()</a></li>
+            <li>.addClass()
+                <ul>
+                    <li><a href="css_addclass.html">.addClass() 1</a></li>
+                    <li><a href="css_addclass_2.html">.addClass() 2</a></li>
+                    <li><a href="css_addclass_3.html">.addClass() 3</a></li>
+                </ul>
+            </li>
+            <li>.css()
+                <ul>
+                    <li><a href="css_css.html">.css() 1</a></li>
+                    <li><a href="css_css_2.html">.css() 2</a></li>
+                    <li><a href="css_css_3.html">.css() 3</a></li>
+                    <li><a href="css_css_4.html">.css() 4</a></li>
+                    <li><a href="css_css_5.html">.css() 5</a></li>
+                    <li><a href="css_css_6.html">.css() 6</a></li>
+                    <li><a href="css_css_7.html">.css() 7</a></li>
+                </ul>
+            </li>
         </ul>
     </div>
 </body>
