css height() and hasClass()

--- a/src/index.html
+++ b/src/index.html
@@ -146,6 +146,13 @@
                     <li><a href="css_css_7.html">.css() 7</a></li>
                 </ul>
             </li>
+            <li><a href="css_hasclass.html">.hasClass()</a></li>
+            <li>.height()
+                <ul>
+                    <li><a href="css_height.html">.height() 1</a></li>
+                    <li><a href="css_height_2.html">.height() 2</a></li>
+                </ul>
+            </li>
         </ul>
     </div>
 </body>
