--- a/src/index.html
+++ b/src/index.html
@@ -153,6 +153,7 @@
                     <li><a href="css_height_2.html">.height() 2</a></li>
                 </ul>
             </li>
+            li><a href="css_inner_height.html">.innerHeight()</a>
         </ul>
     </div>
 </body>
