--- a/src/index.html
+++ b/src/index.html
@@ -230,6 +230,23 @@
                             <li><a href="traversing_filtering_filter_2.html">.filter() 2</a></li>
                         </ul>
                     </li>
+                    <li><a href="traversing_filtering_first.html">.first()</a></li>
+                    <li><a href="traversing_filtering_has.html">.has()</a></li>
+                    <li>.is()
+                        <ul>
+                            <li><a href="traversing_filtering_is.html">.is() 1</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="traversing_filtering_last.html">.last()</a></li>
+                    <li>.map()
+                        <ul>
+                            <li><a href="traversing_filtering_map.html">.map() 1</a></li>
+                            <li><a href="traversing_filtering_map_2.html">.map() 2</a></li>
+                            <li><a href="traversing_filtering_map_3.html">.map() 3</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="traversing_filtering_not.html">.not()</a></li>
+                    <li><a href="traversing_filtering_slice.html">.slice()</a></li>
                 </ul>
             <h3>Miscellaneous Traversing</h3>
 
