--- a/src/index.html
+++ b/src/index.html
@@ -249,7 +249,19 @@
                     <li><a href="traversing_filtering_slice.html">.slice()</a></li>
                 </ul>
             <h3>Miscellaneous Traversing</h3>
-
+                <ul>
+                    <li>.add()
+                        <ul>
+                            <li><a href="traversing_miscellaneous_traversing_add.html">.add() 1</a></li>
+                            <li><a href="traversing_miscellaneous_traversing_add_2.html">.add() 2</a></li>
+                            <li><a href="traversing_miscellaneous_traversing_add_3.html">.add() 3</a></li>
+                            <li><a href="traversing_miscellaneous_traversing_add_4.html">.add() 4</a></li>
+                            <li><a href="traversing_miscellaneous_traversing_add_5.html">.add() 5</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="traversing_miscellaneous_traversing_addback.html">.addBack()</a></li>
+                    <li><a href="traversing_miscellaneous_traversing_andself.html">.addSelf()</a></li>
+                </ul>
             <h3>Tree Traversal</h3>
     </div>
 </body>
